kubernetes-manifests/archive/orchestration/orchestration/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: orchestration
  labels:
    app.kubernetes.io/part-of: personal-corporation
