kubernetes-manifests/archive/orchestration/orchestration/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mission-control
  namespace: orchestration
  annotations:
    caddy.ingress.kubernetes.io/disable-ssl-redirect: "true"
spec:
  ingressClassName: caddy
  rules:
    - host: mission-control.lan
      http:
        paths:
          - backend:
              service:
                name: mission-control
                port:
                  number: 3000
            path: /
            pathType: Prefix
    - host: mc.cluster.local
      http:
        paths:
          - backend:
              service:
                name: mission-control
                port:
                  number: 3000
            path: /
            pathType: Prefix
